# MC504-trabalho-1

./: .gitignore  1cozinheiro  1cozinheiro.c  CMakeLists.txt  CREDITS  CREDITS.md  Makefile  Ncozinheiros  Ncozinheiros.c  NcozinheirosNpanela  README.md  diningSavages  packages.md
conversasAI/: conversaSobrePassagemPorReferenciaEValorDasSprits.md
interface/: sfml_app.cpp
interface/classes/: Chef.cpp  Customers.cpp
interface/include/: Chef.hpp  Customer.hpp  sfml_utils.hpp
interface/src/: sfml_app.cpp  sfml_utils.cpp
src/: 1cozinheiro.c  Ncozinheiros.c  NcozinheirosNpanela.c
